--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.restWidth{
+    position: absolute;
+    right: 0;
+    width: calc(100% - 235px);
+}
+
+.restWidth-close{
+    position: absolute;
+    right: 0;
+    width: calc(100% - 235px);
+}
