--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -58,3 +58,21 @@
 .modal-width {
   height: 80vh;
 }
+
+/* hotel search */
+.flex2 {
+  flex: 2;
+}
+
+.flex3 {
+  flex: 3;
+}
+
+.flex4 {
+  flex: 4;
+}
+
+.flex5 {
+  flex: 5;
+}
+
