add list reservation page and reservation modal

--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -41,6 +41,14 @@
   margin-left: 4px;
 }
 
+.owner-nav {
+  width: 15%;
+}
+
+.owner-content {
+  width: 85%;
+}
+
 .content {
   width: 92%;
   transition: width 0.5s;
